# Crazy-5O-thurRsday-v-mE

./: .gitignore  README.md
doc/: impl-list(ch5).md  implementation-list (ch1~ch4).md  implementation.md  issues.md  riscv-qemu-issues.md  riscv-traps.md  rust-ptr.md
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config
os/src/: app_loader.rs  config.rs  console.rs  entry.S  entry.asm  kfc_logger.rs  lang_items.rs  linker-qemu.ld  main.rs
os/src/kfc_sbi/: mmio.rs  mod.rs  timer.rs  uart.rs
os/src/kfc_util/: mod.rs  up_safe_cell.rs
os/src/mm/: address.rs  frame_allocator.rs  kernel_space.rs  map_area.rs  memory_set.rs  mm_test.rs  mod.rs  page.rs  page_table.rs
os/src/mm/buddy_allocator/: instrusive_linked_list.rs  mod.rs
os/src/mm/heap_allocator/: buddy_allocator.rs  heap_test.rs  instrusive_linked_list.rs  mod.rs  up_safe_allocator.rs
os/src/syscall_impl/: fd.rs  fs.rs  mod.rs  process.rs
os/src/task/: kernel_stack.rs  mod.rs  pid_allocator.rs  processor.rs  switch.rs  task_context.rs  task_info.rs  task_manager.rs  task_struct.rs
os/src/trap/: kernel_trap.rs  mod.rs  trampoline.S  trap_context.rs
user/: Cargo.toml  Makefile
user/.cargo/: config
user/src/: api.rs  console.rs  kfc_logger.rs  lang_items.rs  lib.rs  linker-user.ld  syscall.rs
user/src/user_heap/: buddy_allocator.rs  mod.rs  up_safe_allocator.rs
