[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.7.0"

[features] 
default = ["larger_memory"]

# for larger memory to load app's elf file with debug symbols
larger_memory = []

# for loggers
NoneLog = []
Error = []
Warn = ["Error"]
Debug = ["Warn"]
Info = ["Debug"]
Trace = ["Info"]

[profile.release]
debug = true