[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
NoneLog = []
Error = []
Warn = ["Error"]
Debug = ["Warn"]
Info = ["Debug"]
Trace = ["Info"]

[profile.release]
debug  = true
